# ychackathon-autonomous-mcphub

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  server.py
services/: agent_logs.py  db.py  env.py  llm.py  logging.py  models.py  tools.py
